base page complete working on overflow issues

--- a/styles.css
+++ b/styles.css
@@ -39,11 +39,12 @@ h1 {
 	height: calc(100vh * (1 / 3));
 	justify-content: space-between;
 	padding-left: 20px;
+	flex: 1 1 0;
 }
 
 .warning {
 	font-size: 2rem;
-	width: 69%;
+	width: 100%;
 }
 form {
 	display: grid;
@@ -59,10 +60,12 @@ form {
 .forms {
 	background-color: rgba(3, 3, 3, 0.027);
 	box-shadow: 2px 2px rgba(3, 3, 3, 0.267);
+	flex: 1 1 0;
 }
 
 .bottom {
 	height: calc(100vh * (1 / 3));
+	flex: 1 1 0;
 }
 
 .lName {
@@ -136,4 +139,12 @@ input:invalid {
 
 .login {
 	margin: 20px 10px 10px 20px;
+}
+
+.valid {
+	color: green;
+}
+
+.invalid {
+	color: red;
 }
